[gd_scene load_steps=8 format=3 uid="uid://b416focs68jte"]

[ext_resource type="Texture2D" uid="uid://8vagi7ej86yc" path="res://assets/background&art/floatingvending.png" id="1_wr5f1"]
[ext_resource type="Script" uid="uid://e7r0ov1mpc2l" path="res://scenes/dynamic/interactables/floatingvending/vending_machine.gd" id="1_wrcuy"]
[ext_resource type="AudioStream" uid="uid://dxr8xqqpxyunw" path="res://scenes/music/error-89206.mp3" id="3_wrcuy"]
[ext_resource type="FontFile" uid="uid://dnl7v48dkuj28" path="res://fonts&style/PressStart2P-Regular.ttf" id="4_y6k5d"]
[ext_resource type="AudioStream" uid="uid://b4l1pnwcfwage" path="res://scenes/music/coin-drops-and-spins-272429.mp3" id="5_y6k5d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oy0r4"]
size = Vector2(110, 104)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kk6qx"]
bg_color = Color(0.1, 0.1, 0.1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.94, 0.22, 0.61, 1)

[node name="VendingMachine" type="Area2D"]
script = ExtResource("1_wrcuy")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-58, 45)
texture = ExtResource("1_wr5f1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-62, 44)
shape = SubResource("RectangleShape2D_oy0r4")

[node name="ErrorSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_wrcuy")

[node name="PopupPanel" type="PopupPanel" parent="."]
size = Vector2i(400, 109)
visible = true
theme_override_styles/panel = SubResource("StyleBoxFlat_kk6qx")

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 396.0
offset_bottom = 105.0

[node name="SpeedBoostButton" type="Button" parent="PopupPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_y6k5d")
text = "TimeEnhance (20 coins)"

[node name="MapHintButton" type="Button" parent="PopupPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_y6k5d")
text = "I'm lost (30 coins)"

[node name="LevelSkipperButton" type="Button" parent="PopupPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_y6k5d")
text = "TimeSkipper (130 coins)"

[node name="PurchaseSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_y6k5d")
